--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,9 @@ python-dotenv==1.0.0
 openai==1.3.0
 google-cloud-aiplatform==1.36.4
 anthropic==0.7.4
-wordpress-api==1.0.0
-psycopg2-binary==2.9.9
+wordpress-api==1.2.9
 click==8.1.7
-clickup-python==0.1.2
+clickup-python==1.0.3
 beautifulsoup4==4.12.2
 python-wordpress-xmlrpc==2.3
+pyyaml==6.0.1
